--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npm run convex:dev & vite",
-    "convex:dev": "convex dev",
+    "dev": "vite",
+    "convex": "convex dev",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
